--- a/build.ninja.in
+++ b/build.ninja.in
@@ -13,6 +13,8 @@ g.bootstrap.bootstrapCmd = @@Bootstrap@@
 
 g.bootstrap.bootstrapManifest = @@BootstrapManifest@@
 
+g.bootstrap.chooseStageCmd = .bootstrap/bin/choosestage
+
 g.bootstrap.goRoot = @@GoRoot@@
 
 g.bootstrap.goOS = @@GoOS@@
@@ -32,9 +34,13 @@ g.bootstrap.srcDir = @@SrcDir@@
 builddir = .bootstrap
 
 rule g.bootstrap.bootstrap
-    command = echo "Choosing $$(basename ${in}) for next stage" && ${g.bootstrap.bootstrapCmd} -i ${in}
+    command = ${g.bootstrap.bootstrapCmd} -i ${in}
     description = bootstrap ${in}
     generator = true
+
+rule g.bootstrap.chooseStage
+    command = ${g.bootstrap.chooseStageCmd} --current ${current} --bootstrap ${g.bootstrap.bootstrapManifest} -o ${out} ${in}
+    description = choosing next stage
 
 rule g.bootstrap.cp
     command = cp ${in} ${out}
@@ -221,6 +227,26 @@ build .bootstrap/bin/bpmodify: g.bootstrap.cp .bootstrap/bpmodify/obj/a.out
 default .bootstrap/bin/bpmodify
 
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
+# Module:  choosestage
+# Variant:
+# Type:    bootstrap_go_binary
+# Factory: github.com/google/blueprint/bootstrap.func·002
+# Defined: Blueprints:127:1
+
+build .bootstrap/choosestage/obj/choosestage.a: g.bootstrap.gc $
+        ${g.bootstrap.srcDir}/choosestage/choosestage.go | $
+        ${g.bootstrap.gcCmd}
+    pkgPath = choosestage
+default .bootstrap/choosestage/obj/choosestage.a
+
+build .bootstrap/choosestage/obj/a.out: g.bootstrap.link $
+        .bootstrap/choosestage/obj/choosestage.a | ${g.bootstrap.linkCmd}
+default .bootstrap/choosestage/obj/a.out
+build .bootstrap/bin/choosestage: g.bootstrap.cp $
+        .bootstrap/choosestage/obj/a.out
+default .bootstrap/bin/choosestage
+
+# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 # Module:  gotestmain
 # Variant:
 # Type:    bootstrap_go_binary
@@ -271,37 +297,49 @@ default .bootstrap/bin/minibp
 # Singleton: bootstrap
 # Factory:   github.com/google/blueprint/bootstrap.func·007
 
-rule s.bootstrap.bigbpDocs
-    command = .bootstrap/bin/minibp -p --docs ${out} ${g.bootstrap.srcDir}/Blueprints
-    description = minibp docs ${out}
-
-rule s.bootstrap.bigbp
-    command = .bootstrap/bin/minibp -p -d .bootstrap/main.ninja.in.d -m ${g.bootstrap.bootstrapManifest} -o ${out} ${in}
-    depfile = .bootstrap/main.ninja.in.d
-    description = minibp ${out}
-
 rule s.bootstrap.minibp
-    command = .bootstrap/bin/minibp ${runTests} -c ${checkFile} -m ${g.bootstrap.bootstrapManifest} -d ${out}.d -o ${out} ${in}
+    command = .bootstrap/bin/minibp ${runTests} -m ${g.bootstrap.bootstrapManifest} -d ${out}.d -o ${out} ${in}
     depfile = ${out}.d
     description = minibp ${out}
     generator = true
 
+rule s.bootstrap.bigbp
+    command = .bootstrap/bin/minibp -p -m ${g.bootstrap.bootstrapManifest} --timestamp ${timestamp} --timestampdep ${timestampdep} -d ${outfile}.d -o ${outfile} ${in}
+    depfile = ${outfile}.d
+    description = minibp ${outfile}
+
+rule s.bootstrap.bigbpDocs
+    command = .bootstrap/bin/minibp -p --docs ${out} ${g.bootstrap.srcDir}/Blueprints
+    description = minibp docs ${out}
+
+build .bootstrap/bootstrap.ninja.in: s.bootstrap.minibp $
+        ${g.bootstrap.srcDir}/Blueprints | ${g.bootstrap.bootstrapManifest} $
+        .bootstrap/bin/minibp
+default .bootstrap/bootstrap.ninja.in
+build .bootstrap/main.ninja.in .bootstrap/main.ninja.in.timestamp: $
+        s.bootstrap.bigbp ${g.bootstrap.srcDir}/Blueprints | $
+        .bootstrap/bin/bpfmt .bootstrap/bin/bpmodify $
+        .bootstrap/bin/choosestage .bootstrap/bin/gotestmain $
+        .bootstrap/bin/minibp ${g.bootstrap.srcDir}/Blueprints $
+        .bootstrap/docs/minibp.html
+    outfile = .bootstrap/main.ninja.in
+    timestamp = .bootstrap/main.ninja.in.timestamp
+    timestampdep = .bootstrap/main.ninja.in.timestamp.d
+default .bootstrap/main.ninja.in .bootstrap/main.ninja.in.timestamp
+
 build .bootstrap/docs/minibp.html: s.bootstrap.bigbpDocs | $
         .bootstrap/bin/minibp
 default .bootstrap/docs/minibp.html
-build .bootstrap/main.ninja.in: s.bootstrap.bigbp $
-        ${g.bootstrap.srcDir}/Blueprints | .bootstrap/bin/bpfmt $
-        .bootstrap/bin/bpmodify .bootstrap/bin/gotestmain $
-        .bootstrap/bin/minibp .bootstrap/docs/minibp.html
-default .bootstrap/main.ninja.in
 build .bootstrap/notAFile: phony
 default .bootstrap/notAFile
-build build.ninja: g.bootstrap.bootstrap .bootstrap/main.ninja.in | $
-        ${g.bootstrap.bootstrapCmd} .bootstrap/notAFile $
-        .bootstrap/bootstrap.ninja.in
+build .bootstrap/build.ninja.in: g.bootstrap.chooseStage $
+        .bootstrap/bootstrap.ninja.in .bootstrap/main.ninja.in | $
+        ${g.bootstrap.chooseStageCmd} ${g.bootstrap.bootstrapManifest} $
+        .bootstrap/notAFile
+    current = .bootstrap/bootstrap.ninja.in
+default .bootstrap/build.ninja.in
+
+build build.ninja: g.bootstrap.bootstrap .bootstrap/build.ninja.in | $
+        ${g.bootstrap.bootstrapCmd}
 default build.ninja
-build .bootstrap/bootstrap.ninja.in: s.bootstrap.minibp $
-        ${g.bootstrap.srcDir}/Blueprints | .bootstrap/bin/minibp
-    checkFile = ${g.bootstrap.bootstrapManifest}
-default .bootstrap/bootstrap.ninja.in
 
