Fix running travis on forked repos
If we're not on the official repo, link the directory structure around
so that go can still find the code.

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,9 @@ language: go
 install:
     - sudo apt-get install ninja-build
 
+before_script:
+    - source .travis.fix-fork.sh
+
 script:
     - go test ./...
     - cp build.ninja.in build.ninja.in.orig
