Enforce gofmt in travis
Run gofmt -l . during travis to catch pull requests that have not had
gofmt run on them.

Change-Id: Ibfdf988a535d82721f3c4bc328b189f606f12778

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ before_script:
     - source .travis.fix-fork.sh
 
 script:
+    - ./.travis.gofmt.sh
     - go test ./...
     - mkdir stage
     - cd stage
